--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Rapidfire Order Middlewares Example",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "node --inspect src/index",
     "start": "node src/index",
@@ -12,18 +13,18 @@
   "author": "",
   "license": "BEERWARE",
   "dependencies": {
-    "@luasenvy/rapidfire": "^0.1.9",
-    "express-session": "^1.17.1",
-    "nuxt": "^2.14.12"
+    "@luasenvy/rapidfire": "^0.3.7",
+    "express-session": "^1.17.3",
+    "nuxt": "^2.15.8"
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.19.0",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "husky": "^4.3.8",
+    "@babel/eslint-parser": "^7.17.0",
+    "eslint": "^8.15.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^8.0.1",
     "imagemin-lint-staged": "^0.4.0",
-    "lint-staged": "^10.5.4",
-    "prettier": "^2.2.1"
+    "lint-staged": "^12.4.1",
+    "prettier": "^2.6.2"
   }
 }
